css/addins.css
.color-gold {
	color: rgb(209, 184, 84) !important;
}

.btn-animation {
	transition: all 0.5s;
  }
  
  .btn-animation span {
	cursor: pointer;
	display: inline-block;
	position: relative;
	transition: 0.5s;
  }
  
  .btn-animation span:after {
	content: '\00bb';
	position: absolute;
	opacity: 0;
	top: 0;
	right: -20px;
	transition: 0.5s;
  }
  
  .btn-animation:hover span {
	padding-right: 25px;
  }
  
  .btn-animation:hover span:after {
	opacity: 1;
	right: 0;
  }

.white-bottom-blur {
	height:45px;
	background: -webkit-linear-gradient(-90deg,rgba(255, 255, 255, 0.4) 25%,rgba(255, 255, 255, 0.8) 25%, #fff 50%);
	background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 0.4) 25%,rgba(255, 255, 255, 0.8) 25%, #fff 50%);
	background: linear-gradient(180deg,rgba(255, 255, 255, 0.4) 25%,rgba(255, 255, 255, 0.8) 25%,  #fff 50%);
	margin-left:16px;
	bottom:5px;
	width: calc(100% - 32px);
	left:0;
	border-radius:0px 0px 3px 3px;
	z-index:99;
}

.white-bottom-blur-footer {
	height:90px;
	background: -webkit-linear-gradient(-90deg,rgba(255, 255, 255, 0.4) 15%,rgba(253, 253, 253, 0.8) 35%, #fff 50%);
	background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 0.4) 15%,rgba(253, 253, 253, 0.8) 35%, #fff 50%);
	background: linear-gradient(180deg,rgba(255, 255, 255, 0.4) 15%,rgba(253, 253, 253, 0.8) 35%,  #fff 50%);
	margin-left:16px;
	bottom:5px;
	width: calc(100% - 32px);
	left:0;
	border-radius:0px 0px 3px 3px;
	z-index:99;
}



.bottom {
	bottom:0;
}

.black-a > a{
	color:#102846 !important;
}

.main-article {
	right:0; 
	top:0;
	height:100%;
  }

.tiny-article {
	border: solid 1px #fff;
	background-color:#fff;
	padding:5px;
	border-radius:3px;
	margin-top:5px;
	margin-bottom:5px;
	height:300px;
	overflow-y:hidden;
}

.shadow-hover {
	box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
}

.shadow-hover:hover {
	box-shadow: 0 0rem 0rem rgba(0, 0, 0, 0.0) !important;
}

.tiny-article > a > h3 {
	margin-top:0;
	padding-top:5px;
	color:#102846 !important;
	font-weight:600;
}

.tiny-article > a > p {
	color: rgb(58, 58, 58) !important;
	font-size:1.2rem;
}

.tiny-article > a > img{
	height: 35px;
	width:auto;
	z-index:999;
	position:absolute;
	right:20px;
	top:10px;
}

.more {
	z-index:999;
	position:absolute;
	right:20px;
	bottom:10px;
	color:#c1a94d;
	font-weight:700;
	border-radius:5px;
	padding:3px;
	font-size:15px;
	background-color:#fff;
}

.more-footer {
	z-index:999;
	float:right;
	color:#c1a94d;
	font-weight:700;
	border-radius:5px;
	padding:3px;
	font-size:15px;
	margin-right:10px;
	background-color:#fff;
}

.lightbg {
	background-color:#f7f7f7;
}

.form {
	margin-top:20px;
}

 #slider {
	position: relative;
	overflow: hidden;
	width:100%;
  }
  
  #slider ul {
	position: relative;
	margin: 0;
	padding: 0;
	height: 500px;
	list-style: none;
	width:100%;
  }
  
  #slider ul li {
	position: relative;
	display: block;
	float: left;
	margin: 0;
	padding: 0;
	width: 100%;
	height: 500px;
	background: #ccc;
	text-align: center;
	line-height: 300px;
  }

.parallax-home {
min-height: 400px; 
background-attachment: fixed;
background-position: center;
background-repeat: no-repeat;
background-size: cover;
-o-background-size: cover;
-moz-background-size: cover;
-webkit-background-size: cover;
}

#tips {
	padding-left:0;
	margin-left:0;
}

.parallax {
	min-height: 200px; 
	background-attachment: fixed;
	background-repeat: repeat;
	}

.search-icon {
	width:55px;
  padding-left:1rem;
  padding-right:1rem;
  margin-top:-3px;
}

.input-search-icon {
	height:25px;
	width:auto;
	float:right;
	padding-right:15px;
	margin-top:-30px
}

.navbar-brand-silent {
	color:#102846;
	text-shadow:0px 0px 8px #fff;
}


.nav-link {
	color: #113259;
	text-decoration:none;
	list-style: none;
}

.nav-link:hover, .nav-link:focus {
	color: #102846;
	background-color: #eee;
}


  
  .d-c {
	display: none;
	position: absolute;
	width:80%;
	right:0;
	padding: 12px 16px;
	border-top:solid #eee 1px;
	z-index: 999;
	margin-top:0px;
  }

  .d-c > div > div > li {
	  padding: 5px 10px;
	  font-size:1.3rem;
	  text-decoration:none;
	list-style: none;
  }
  
  .d-p:hover .d-c {
	display: block;
  }
  
  .special-circle{
	border-radius:100px;
	height:40px;
	width:40px;
	background-color:#26619c;
	margin:5px 0px 0px -11px; /*top, right, bottom, left*/
	position:absolute;
	left:50%;
	cursor:pointer;
	color:#fff;
	text-align:center;
	font-size:25px;
	box-shadow:0px 0px 20px rgba(0, 0, 0, 0.4);
}

.special-circle:hover, .special-circle:focus{
	box-shadow:0px 0px 0px rgba(0, 0, 0, 0.0);
	font-size:24px;
	height:38px;
	width:38px;
}




/*end*/





	

.o-h{
	overflow:hidden
}


	.boxArticle {
		background-color: #ffffff;
		padding: 2.75em 0em 0em 0em;
	}
	.boxArticle .info{
		padding: 2em 2em;
	}

		.boxArticle .image.featured {
			position: relative;
			width: auto;
			margin: -3em 0em 0em 0em;
		}
		
		.boxArticle.post header {
			padding-top: 1em;
			margin: 0 0 2em 0;
		}

		.boxArticle.post h1 {
			font-size: 2.5em;
			letter-spacing: -0.015em;
			line-height: .9em;
			color:#102846;
		}

		.boxArticle.post header > p {
			margin-top: 1.25em;
			font-size: 1.25em;
		}

		.boxArticle footer ul.actions {
			margin-bottom: 0;
		}

		.boxSide > header{
			background-color:#eeeeee;
		}

		boxSide li a{
			text-decoration: none; 
			word-wrap: break-word
		}

		#articleList li{
			border-bottom:solid rgb(225, 225, 225) 1px;
		}
		
		.lg-font{
	font-size: 1.1em
}

ul li {
			text-decoration: none;
			list-style: none;
		}
		
		#page-wrapper .article-search{
		background-color:rgba(238, 238, 238, 0.426);
		box-shadow: 0px 0px 25px lightgray inset;
		padding:10px
	}

	.article-search input{
		width:100%;
		border-radius:4px;
		border:none;
		padding:3px 20px;
		line-height:1.75em;
		box-shadow:1px 1px 4px gray inset
	}

/* Header */
	#main ul li a{
		color: #26619c;
	}

	#main ul li{
		border-bottom: solid rgb(225, 225, 225) 1px;
	}

	.similar-resources{
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
		text-decoration:none !important;
	}
	
	.similar-resources:hover {
		text-decoration: none !important;
	}

	.similar-resources > li > a:after{
		content:"»";
		float:right;
	}

	.search-a {
		text-decoration: none !important;
	}

	#main ul li:hover{
		background-color:#f7f7f7;
	}

	#main ul li a img{
		height:20px;
		width:20px;
		margin:0px 0px -3px 0px
	}

	.post-title div {
		overflow: hidden;
		position: relative;
		padding:0px 10px;
	  }
	.article-title div {
		overflow: hidden;
		position: relative;
		padding:0px 10px;
	  }
	
	.post-author-time{
		font-size:15px;
		color:#747474;
		background-color:#eeeeee;
		padding:10px;
	}
	.post-author-time img{
	  margin:0px 0px -10px 0px;
  }

	  .article-title p{
		display: -webkit-box;
		-webkit-box-orient: vertical;
		-webkit-line-clamp: 2;
	  }

	  

	  .article-descriptor-n-img{
		display:inline-block;
		position: absolute;
		top: 0;
		right: 0;
		margin:5px;
		background-color:rgba(0, 0, 0, 0.282);
		color:rgba(255, 255, 255, 0.912);
		font-size:15px;
		line-height:1.2;
		padding:3px !important;
	  }

	  
	  .b-b{
		border-left:solid #f7f7f7 1px;
		border-right:solid #f7f7f7 1px;
		border-top:solid #f7f7f7 1px;
		border-bottom:solid #f7f7f7 1px;
	}

	  .bl-b{
		  border-left:solid 5px #26619c;
		  border-right:solid #f7f7f7 1px;
		  border-top:solid #f7f7f7 1px;
		  border-bottom:solid #f7f7f7 1px;
	  }
	 .bl-b:hover{
		 border-left:solid 5px #26619c;
	}

	.br-b{
		border-left:solid #f7f7f7 1px;
		border-right:solid 5px #26619c;
		border-top:solid #f7f7f7 1px;
		border-bottom:solid #f7f7f7 1px;
	}
   .br-b:hover{
	   border-left:solid #b1b1b1 1px;
		border-right:solid 5px #26619c;
		border-top:solid #b1b1b1 1px;
		border-bottom:solid #b1b1b1 1px;
  }

	  .author-icon{
		border-radius:50%;
		height:30px;
		width:30px;
		margin-bottom: 3px;
		
	  }

	  
/* Footer */

.b-bottom{
border-bottom:solid 2px #26619c;
width:40%
}

.article-con {
    position: relative;
	color: #102846;
	border:1px rgba(204, 204, 204, 0.214) solid;
	transition: transform 1s;
	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.05) !important
  }

  .article-con:hover{
	z-index:999;
	-ms-transform: scale(1.05,1.05);
	-webkit-transform: scale(1.05,1.05);
	transform: scale(1.05,1.05);
  }
  .article-title {
    position: relative;
	background-color:#fff
  }

  .post-title {
    position: relative;
	background-color:#fff
  }

  .article-title button{
	float:right;
	margin-bottom:10px
}

.d-none{
	display:none 
}
	#footer {
		position: relative;
		color: #858484;
		background-color:#fff;
	}

.gotop{
	float:right; margin:20px;font-size:40px;color:#26619c
}
.gotop:hover {
	color:#26619cbb
}

		
		
		#main article{
				margin:10px
			}

			#main ul li:after{
				content:"";
				float:right;
			}
			
			/*small*/
/*			.boxArticle.post h1 {
				font-size: 1.7em;
			}
		
			h2 {
				font-size: 1.3em;
				line-height:1.0em;
			}
			
			  .hide736{
					display:none
				  }
				  
				  .boxArticle .info{
					padding: 1em 1em;
				}

				
					#header h1 {
					letter-spacing: -0.04em;
					font-size: .9em
				}
				
				#header img{
					height:30px;
					margin-left:6px
				}
				#header .nav-title{
					margin-left:-8px;
					font-size: 1.59em;
				  }

				  #header > .hide736{
					display:none
				  }

				  .article-search input{
					margin:20px 0px 20px 0px
				}

				.search-icon{
					margin:27px 0px 0px -30px
				}
			
				.center-search{
					margin:0 auto;
					width:100%
				}
				
				#main ul li:after{
				content:" »";
				float:right;
			}
			
			 #footer .article-d-none{
				display:block
				}*/
				
	/*end of 736*/


	@media screen and (max-width:540px){
		.post-title > div > h3{
			font-size: 1.1em;
		}
	}

	/* extra */
	#msgDiv{
		color:#fff;
		text-align:center;
		background-color: #26619c;
		padding:20px;
	}

